@@ -23,6 +23,8 @@ Changes for Perl programming language extension Module-Install
 	  contain sub-modules (patch by Florent Angly) (ISHIGAKI)
 	- Resolved #56474: Dependency check error fails to be triggered
 	  (by Florent Angly) (ISHIGAKI)
+	- Resolved #5528: Sub-directory builds don't work (by Steve Hay)
+	  (ISHIGAKI)
 	- Pass VERSION_FROM to EU::MM in the background to let it check
 	  version integrity (ISHIGAKI)
 	- Improved tests and removed unnecessary directories/files
